<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llGame"
    style="@style/styleLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginTop="10dp"
        android:gravity="top"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvScore"
            style="@style/styleTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tvScore" android:textColor="#FFF"/>

        <TextView
            android:id="@+id/tvPoints"
            style="@style/styleTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tvScorePoints" android:textColor="#FFF"/>

        <TextView
            android:id="@+id/tvTimer"
            style="@style/styleTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tvSeconds" android:textColor="#FFF"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llButtons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvQuestion"
            style="@style/styleTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/question_bg"
            android:gravity="center"
            android:padding="30dp"
            android:text="@string/tvQuestion"
            android:textColor="#FFF" />

        <ImageView
            android:id="@+id/ivImage"
            android:layout_width="fill_parent"
            android:layout_height="400dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/ivGameImage"
            android:src="@drawable/splash3" />

        <Button
            android:id="@+id/btnA"
            style="@style/styleButton"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_button"
            android:text="@string/btnA" />

        <Button
            android:id="@+id/btnB"
            style="@style/styleButton"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_button"
            android:text="@string/btnB" />

        <Button
            android:id="@+id/btnC"
            style="@style/styleButton"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_button"
            android:text="@string/btnC" />
    </LinearLayout>

</LinearLayout>